--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://172.31.32.176:9000/</sonar.host.url>
-                <sonar.login>squ_8c6083d4929b108085a177bd709df8c63ffb81eb</sonar.login>
+                <sonar.login>squ_ed22e1e64017e2274ed4de2d9d21c0cf2333e43d</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -96,14 +96,15 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://172.31.5.95:9980/mithuntechnologies/repository/citibank-release/</url>
+	      <name>citibank Releases Nexus Repository</name>
+	      <url>http://13.233.196.142:9980/repository/citibank-release/
+</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://172.31.5.95:9980/mithuntechnologies/repository/citibank-snapshot/</url>
+	      <name>citibank Snapshot Nexus Repository </name>
+	      <url>http://13.233.196.142:9980/repository/citibank-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
