--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://52.66.192.122:9000/</sonar.host.url>
-                <sonar.login>squ_ed22e1e64017e2274ed4de2d9d21c0cf2333e43d</sonar.login>
+		<sonar.host.url>http://http://43.204.212.87/:9000/</sonar.host.url>
+                <sonar.login>squ_ce4a394ebe00c54481049f767a1d842fe3a24a55</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
